<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical" >
    
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/car_update_nick" 
            android:textAppearance="?android:attr/textAppearanceSmall"/>
        
        <RelativeLayout
            android:id="@+id/rel_lay_nick"
            style="@style/WhiteBlockStyle" >
        	
        	<EditText
            	android:id="@+id/txt_carupdate_nick"
            	android:layout_width="match_parent"
            	android:layout_height="match_parent"
            	 android:background="@null"
            	android:layout_centerVertical="true"
                android:inputType="textCapWords"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </RelativeLayout>
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/car_update_manufacturer"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
        
        <RelativeLayout
            android:id="@+id/rel_lay_manufacturer"
            style="@style/WhiteBlockStyle" >
        	
        	<EditText
            	android:id="@+id/txt_carupdate_manufacturer"
            	android:layout_width="match_parent"
            	android:layout_height="match_parent"
            	 android:background="@null"
            	android:layout_centerVertical="true"
                android:inputType="textCapWords"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </RelativeLayout>
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/car_update_mileage"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        
        <RelativeLayout
            android:id="@+id/rel_lay_mileage"
            style="@style/WhiteBlockStyle" >
        	
            <TextView
                android:id="@+id/txt_carupdate_unit" 
                android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:layout_alignParentRight="true"
            	android:layout_centerVertical="true"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            
        	<EditText
            	android:id="@+id/txt_carupdate_mileage"
            	android:layout_width="match_parent"
            	android:layout_height="match_parent"
            	 android:background="@null"
            	android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/txt_carupdate_unit"
                android:inputType="number"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </RelativeLayout>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_car_activity_car_type"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <RelativeLayout
            android:id="@+id/rel_lay_carUpdType"
            style="@style/WhiteBlockStyle" >

            <Spinner
                android:id="@+id/spinner_carupdate_types"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:entries="@array/car_types_arrays"
                android:prompt="@string/add_car_activity_type_prompt"
                android:spinnerMode="dropdown"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/img_addcar_car"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="2dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="2dp"
            android:clickable="true"
            android:onClick="onCarImageBtnClick"
            android:src="@android:drawable/ic_menu_camera"
            />



        <Button 
        	android:id="@+id/btn_carupdate_update"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:gravity="center"
        	android:text="@string/car_update_update_btn"
        	android:onClick="onUpdateBtnClick"
        	android:textAppearance="?android:attr/textAppearanceMedium"/>
        
        <TextView 
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_gravity="center_horizontal"
        	android:text="@string/car_update_delete_message"
        	android:textAppearance="?android:attr/textAppearanceSmall" />
        
    	<Button 
    		android:id="@+id/btn_carupdate_delete"
     		android:layout_width="match_parent"
       		android:layout_height="wrap_content"
       		android:text="@string/car_update_delete_btn"
       		android:onClick="onDeleteBtnClick"
       		android:textAppearance="?android:attr/textAppearanceMedium"/>
    </LinearLayout>
    
</ScrollView>


