<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp">
    <!-- android:layout_height="?android:attr/listPreferredItemHeight"  -->


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_itemcar_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/desc_carPic" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:background="@drawable/gradient" />

    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <ImageView
            android:id="@+id/img_itemcar_type"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:layout_margin="4dp"
            android:contentDescription="@string/desc_carPic"
            android:src="@drawable/caricon" />

        <TextView
            android:id="@+id/txt_itemcar_nick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/img_itemcar_type"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@+id/img_itemcar_type"
            android:maxLines="1"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/txt_itemcar_type_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_itemcar_nick"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@+id/img_itemcar_type"
            android:maxLines="1" />

        <TextView
            android:id="@+id/txt_itemcar_mileage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@+id/img_itemcar_type"
            android:maxLines="1"
            android:textColor="@color/app_orange" />

        <TextView
            android:id="@+id/txt_itemcar_consumption_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/l_100km"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/txt_itemcar_consumption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/txt_itemcar_consumption_unit"
            android:maxLines="1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/app_green" />

        <TextView
            android:id="@+id/txt_itemcar_avg_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="2dp"
            android:layout_toLeftOf="@+id/txt_itemcar_consumption"
            android:text="@string/list_item_car_txt_avg_symbol" />

    </RelativeLayout>
</RelativeLayout>